--- a/index.html
+++ b/index.html
@@ -661,7 +661,7 @@
                 const audioSource = audioPlayer.querySelector('source');
                 const newSrc = lang === 'de' 
                     ? './Google and GDPR_ A Data Balancing Act.wav' 
-                    : './Google-and-GDPR_ A-Data Balancing Act-englisch.wav';
+                    : './Google-and-GDPR_ A-Data Balancing Act-englisch.mp3';
                 audioSource.src = newSrc;
                 audioPlayer.load();
             }
